// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaultsController GET /v2/harvests error cases returns a 400 for invalide chain 1`] = `
Object {
  "message": "invalid is not a supported chain",
}
`;

exports[`VaultsController GET /v2/harvests success cases Return extended harvest for chain vaults 1`] = `
Object {
  "0x2B5455aac8d64C14786c3a29858E43b5945819C0": Array [
    Object {
      "amount": 0.019444617913515275,
      "block": 13610723,
      "estimatedApr": 0,
      "eventType": "Harvest",
      "strategyBalance": 675.7270352627328,
      "timestamp": 1636848055,
      "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
    },
    Object {
      "amount": 519.4928843851667,
      "block": 13610723,
      "estimatedApr": 0,
      "eventType": "TreeDistribution",
      "strategyBalance": 675.7270352627328,
      "timestamp": 1636848055,
      "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
    },
    Object {
      "amount": 127.77060811430661,
      "block": 13610723,
      "estimatedApr": 0,
      "eventType": "TreeDistribution",
      "strategyBalance": 675.7270352627328,
      "timestamp": 1636848055,
      "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
    },
    Object {
      "amount": 0.19661862226091095,
      "block": 13647052,
      "estimatedApr": 0,
      "eventType": "Harvest",
      "strategyBalance": 671.2872269577839,
      "timestamp": 1637345136,
      "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
    },
  ],
}
`;

exports[`VaultsController GET /v2/harvests/:vault error cases returns a 400 for invalide chain 1`] = `
Object {
  "message": "invalid is not a supported chain",
}
`;

exports[`VaultsController GET /v2/harvests/:vault success cases Return extended harvests for chain vault by addr 1`] = `
Array [
  Object {
    "amount": 0.019444617913515275,
    "block": 13610723,
    "estimatedApr": 0,
    "eventType": "Harvest",
    "strategyBalance": 675.7270352627328,
    "timestamp": 1636848055,
    "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
  },
  Object {
    "amount": 519.4928843851667,
    "block": 13610723,
    "estimatedApr": 0,
    "eventType": "TreeDistribution",
    "strategyBalance": 675.7270352627328,
    "timestamp": 1636848055,
    "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
  },
  Object {
    "amount": 127.77060811430661,
    "block": 13610723,
    "estimatedApr": 0,
    "eventType": "TreeDistribution",
    "strategyBalance": 675.7270352627328,
    "timestamp": 1636848055,
    "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
  },
  Object {
    "amount": 0.19661862226091095,
    "block": 13647052,
    "estimatedApr": 0,
    "eventType": "Harvest",
    "strategyBalance": 671.2872269577839,
    "timestamp": 1637345136,
    "token": "0x64eda51d3ad40d56b9dfc5554e06f94e1dd786fd",
  },
]
`;

exports[`VaultsController GET /v2/vaults with a specified chain returns the vaults for bsc 1`] = `
Array [
  Object {
    "apr": 13.86,
    "apy": 20.79,
    "asset": "BADGER",
    "available": 0,
    "balance": 10,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "maxApr": 13.86,
    "maxApy": 20.79,
    "minApr": 13.86,
    "minApy": 20.79,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "sources": Array [
      Object {
        "apr": 6.93,
        "boostable": false,
        "maxApr": 6.93,
        "minApr": 6.93,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 6.93,
        "boostable": false,
        "maxApr": 6.93,
        "minApr": 6.93,
        "name": "Curve LP Fees",
      },
    ],
    "sourcesApy": Array [
      Object {
        "apr": 6.93,
        "boostable": false,
        "maxApr": 6.93,
        "minApr": 6.93,
        "name": "Vault Compounding",
      },
      Object {
        "apr": 6.93,
        "boostable": false,
        "maxApr": 6.93,
        "minApr": 6.93,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 6.93,
        "boostable": false,
        "maxApr": 6.93,
        "minApr": 6.93,
        "name": "Curve LP Fees",
      },
    ],
    "state": "open",
    "strategy": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 0,
    },
    "tokens": Array [],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 177477,
    "vaultAsset": "bcvxCRV",
    "vaultToken": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 0.13422071945316222,
      "harvestPeriodApr": 0,
      "harvestPeriodApy": 0,
      "harvestPeriodSources": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "harvestPeriodSourcesApy": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "harvestTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.13422071945316222,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
      ],
      "harvestValue": 12510,
      "nonHarvestApr": 13.86,
      "nonHarvestApy": 13.86,
      "nonHarvestSources": Array [
        Object {
          "apr": 6.93,
          "boostable": false,
          "maxApr": 6.93,
          "minApr": 6.93,
          "name": "Badger Rewards",
        },
        Object {
          "apr": 6.93,
          "boostable": false,
          "maxApr": 6.93,
          "minApr": 6.93,
          "name": "Curve LP Fees",
        },
      ],
      "nonHarvestSourcesApy": Array [
        Object {
          "apr": 6.93,
          "boostable": false,
          "maxApr": 6.93,
          "minApr": 6.93,
          "name": "Badger Rewards",
        },
        Object {
          "apr": 6.93,
          "boostable": false,
          "maxApr": 6.93,
          "minApr": 6.93,
          "name": "Curve LP Fees",
        },
      ],
      "yieldApr": 0.13422071945316222,
      "yieldPeriodApr": 0,
      "yieldPeriodSources": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "yieldTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.13422071945316222,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
      ],
      "yieldValue": 12510,
    },
  },
]
`;

exports[`VaultsController GET /v2/vaults with a specified chain returns the vaults for eth 1`] = `
Array [
  Object {
    "apr": 13.86,
    "apy": 20.79,
    "asset": "BADGER",
    "available": 0,
    "balance": 10,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "maxApr": 13.86,
    "maxApy": 20.79,
    "minApr": 13.86,
    "minApy": 20.79,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "sources": Array [
      Object {
        "apr": 6.93,
        "boostable": false,
        "maxApr": 6.93,
        "minApr": 6.93,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 6.93,
        "boostable": false,
        "maxApr": 6.93,
        "minApr": 6.93,
        "name": "Curve LP Fees",
      },
    ],
    "sourcesApy": Array [
      Object {
        "apr": 6.93,
        "boostable": false,
        "maxApr": 6.93,
        "minApr": 6.93,
        "name": "Vault Compounding",
      },
      Object {
        "apr": 6.93,
        "boostable": false,
        "maxApr": 6.93,
        "minApr": 6.93,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 6.93,
        "boostable": false,
        "maxApr": 6.93,
        "minApr": 6.93,
        "name": "Curve LP Fees",
      },
    ],
    "state": "open",
    "strategy": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 0,
    },
    "tokens": Array [],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 177477,
    "vaultAsset": "bcvxCRV",
    "vaultToken": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 0.13422071945316222,
      "harvestPeriodApr": 0,
      "harvestPeriodApy": 0,
      "harvestPeriodSources": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "harvestPeriodSourcesApy": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "harvestTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.13422071945316222,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
      ],
      "harvestValue": 12510,
      "nonHarvestApr": 13.86,
      "nonHarvestApy": 13.86,
      "nonHarvestSources": Array [
        Object {
          "apr": 6.93,
          "boostable": false,
          "maxApr": 6.93,
          "minApr": 6.93,
          "name": "Badger Rewards",
        },
        Object {
          "apr": 6.93,
          "boostable": false,
          "maxApr": 6.93,
          "minApr": 6.93,
          "name": "Curve LP Fees",
        },
      ],
      "nonHarvestSourcesApy": Array [
        Object {
          "apr": 6.93,
          "boostable": false,
          "maxApr": 6.93,
          "minApr": 6.93,
          "name": "Badger Rewards",
        },
        Object {
          "apr": 6.93,
          "boostable": false,
          "maxApr": 6.93,
          "minApr": 6.93,
          "name": "Curve LP Fees",
        },
      ],
      "yieldApr": 0.13422071945316222,
      "yieldPeriodApr": 0,
      "yieldPeriodSources": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "yieldTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.13422071945316222,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
      ],
      "yieldValue": 12510,
    },
  },
]
`;

exports[`VaultsController GET /v2/vaults with an invalid specified chain returns a 400 1`] = `
Object {
  "message": "invalid is not a supported chain",
}
`;

exports[`VaultsController GET /v2/vaults with no specified chain returns eth vaults 1`] = `
Array [
  Object {
    "apr": 13.86,
    "apy": 20.79,
    "asset": "BADGER",
    "available": 0,
    "balance": 10,
    "behavior": "Compounder",
    "boost": Object {
      "enabled": false,
      "weight": 0,
    },
    "bouncer": "none",
    "lastHarvest": 1656606946,
    "maxApr": 13.86,
    "maxApy": 20.79,
    "minApr": 13.86,
    "minApy": 20.79,
    "name": "Badger",
    "pricePerFullShare": 1,
    "protocol": "Badger",
    "sources": Array [
      Object {
        "apr": 6.93,
        "boostable": false,
        "maxApr": 6.93,
        "minApr": 6.93,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 6.93,
        "boostable": false,
        "maxApr": 6.93,
        "minApr": 6.93,
        "name": "Curve LP Fees",
      },
    ],
    "sourcesApy": Array [
      Object {
        "apr": 6.93,
        "boostable": false,
        "maxApr": 6.93,
        "minApr": 6.93,
        "name": "Vault Compounding",
      },
      Object {
        "apr": 6.93,
        "boostable": false,
        "maxApr": 6.93,
        "minApr": 6.93,
        "name": "Badger Rewards",
      },
      Object {
        "apr": 6.93,
        "boostable": false,
        "maxApr": 6.93,
        "minApr": 6.93,
        "name": "Curve LP Fees",
      },
    ],
    "state": "open",
    "strategy": Object {
      "address": "0x0000000000000000000000000000000000000000",
      "aumFee": 0,
      "performanceFee": 0,
      "strategistFee": 0,
      "withdrawFee": 0,
    },
    "tokens": Array [],
    "type": "native",
    "underlyingToken": "0x3472A5A71965499acd81997a54BBA8D852C6E53d",
    "value": 177477,
    "vaultAsset": "bcvxCRV",
    "vaultToken": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
    "version": "v1",
    "yieldProjection": Object {
      "harvestApr": 0.13422071945316222,
      "harvestPeriodApr": 0,
      "harvestPeriodApy": 0,
      "harvestPeriodSources": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "harvestPeriodSourcesApy": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "harvestTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.13422071945316222,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
      ],
      "harvestValue": 12510,
      "nonHarvestApr": 13.86,
      "nonHarvestApy": 13.86,
      "nonHarvestSources": Array [
        Object {
          "apr": 6.93,
          "boostable": false,
          "maxApr": 6.93,
          "minApr": 6.93,
          "name": "Badger Rewards",
        },
        Object {
          "apr": 6.93,
          "boostable": false,
          "maxApr": 6.93,
          "minApr": 6.93,
          "name": "Curve LP Fees",
        },
      ],
      "nonHarvestSourcesApy": Array [
        Object {
          "apr": 6.93,
          "boostable": false,
          "maxApr": 6.93,
          "minApr": 6.93,
          "name": "Badger Rewards",
        },
        Object {
          "apr": 6.93,
          "boostable": false,
          "maxApr": 6.93,
          "minApr": 6.93,
          "name": "Curve LP Fees",
        },
      ],
      "yieldApr": 0.13422071945316222,
      "yieldPeriodApr": 0,
      "yieldPeriodSources": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0,
          "balance": 0,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 0,
        },
      ],
      "yieldTokens": Array [
        Object {
          "address": "0x4e3FBD56CD56c3e72c1403e103b45Db9da5B9D2B",
          "apr": 0.13422071945316222,
          "balance": 10,
          "decimals": 18,
          "name": "Convex Token",
          "symbol": "CVX",
          "value": 12510,
        },
      ],
      "yieldValue": 12510,
    },
  },
]
`;
